Revision history for {{ $dist->name }}:

{{$NEXT}}
 [Enhancements]
  - Minor code improvements.

v0.2.5    2022-09-21 16:19:29+01:00 Europe/London
 [Enhancements]
  - Minor code improvements.

  - Use () prototype for predicate methods.

v0.2.4    2022-09-20 18:27:04+01:00 Europe/London
 [Documentation]
 - Added CAVEAT about performance.

 - Removed "fast" from the ABSTRACT, since it's not necessarily fast.

v0.2.3    2022-09-04 16:07:55+01:00 Europe/London
 [Documentation]
 - Bumped copyright year.

 - Fixed encoding on links in README.

 [Other]
 - Update MANIFEST.SKIP, removing bad rule.

 - Sign release.

v0.2.2    2021-05-21 17:03:37+01:00 Europe/London
 [Bug Fixes]
 - Constructor now fails if there are no values.

 [Tests]
 - Changed tests to use Test::Most with Test::Exception.

 - Added more tests.

v0.2.1    2021-04-30 11:26:32+01:00 Europe/London
 [Enhancements]
 - Add `predicates` method.

 [Documentation]
 - Fixed typo.

v0.2.0    2021-04-29 11:20:06+01:00 Europe/London
 [Enhancements]
 - Add `values` method.

 - Moved overloaded methods to parent classes (removes slight
   performance improvement from v0.1.1, but should reduce memory
   footprint).

 [Bug Fixes]
 - The values are genuinely read only.

 - "0" is accepted as a value.

 [Documentation]
 - Add more Enum-style modules to the SEE ALSO section.

v0.1.1    2021-04-29 09:21:48+01:00 Europe/London
 [Bug Fixes]
 - Remove unnecessary call to SvREADONLY.

 [Enhancements]
 - Improve performance of eq/ne checks.

v0.1.0    2021-04-28 23:04:24+01:00 Europe/London
 - Initial version released.